--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>portifolio do ka(fundo do abismo⚰️)</title>
+    <title>portifolio da stefany</title>
 </head>
 
 <body>
     <header class="container text-center">
-        <img src="Winx-Club-PNG-photo.png" alt="avatar do kaka" class="rounded-circle" width="150" height="150" srcset="">
-        <p class="lead">Eu sou Kauã_</p>
-        <h1>Eu quero um survete de murangoo</h1>
-        <p>Sou Estudante de ensino medio na escola joão pedro cardoso. Fiz computação basica e espero evoluir em biologia!</p>
-        <p>Minhas peripecias🫦</p>
+        <img src="Winx-Club-PNG-photo.png" alt="avatar da Stefany" class="rounded-circle" width="150" height="150" srcset="">
+        <p class="lead">Eu sou Stefany_</p>
+        <h1>Eu quero dinheiro</h1>
+        <p>Sou Estudante de ensino medio na escola joão pedro cardoso. Fiz administração quero ser agnete de recursos humanos!</p>
+        <p>Minhas habilidades🫦</p>
         <div>
             <p class="badge bg-secondary">Otima comunicação</p>
             <p class="badge bg-secondary">basico de informação computacional</p>
